# bharat-rag

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 8d097a61d75c_documents_and_chunks_for_rag.py  c87868dbd78b_add_updated_at_to_collections.py  cb36340230fb_create_core_tables.py
docs/: PRD.md
infra/: docker-compose.dev.yml
specs/: brp-v0.1.md
src/bharatrag/: main.py
src/bharatrag/api/: answer.py  collections.py  health.py  ingest.py  jobs.py  main.py  query.py
src/bharatrag/core/: config.py  context.py  logging_config.py
src/bharatrag/db/: session.py
src/bharatrag/db/models/: __init__.py  chunk.py  collection.py  document.py  ingestion_job.py
src/bharatrag/domain/: answer.py  chunk.py  collection.py  document.py  ingestion_job.py  query.py
src/bharatrag/ports/: embedding.py  ingestion_handler.py  llm.py
src/bharatrag/services/: chunking_service.py  embedding_service.py  ingestion_service.py  retrieval_service.py
src/bharatrag/services/chunking/: __init__.py  sentence_chunker.py  simple_chunker.py
src/bharatrag/services/embeddings/: simple_hash_embedder.py
src/bharatrag/services/ingestion_handlers/: __init__.py  image_handler.py  pdf_handler.py  text_handler.py  video_handler.py  website_handler.py
src/bharatrag/services/llm/: __init__.py  extractive_llm.py  llm_factory.py  local_llm.py  prompt_builder.py
src/bharatrag/services/repositories/: chunk_repository.py  collection_repository.py  document_repository.py  ingestion_job_repository.py
tests/unit/: test_collections_api.py  test_db_smoke.py  test_healthz.py  test_image_ingestion.py  test_ingestion_job_lifecycle.py  test_llm_factory.py  test_local_llm.py  test_pdf_ingestion.py  test_prompt_builder.py  test_rag_query_answer.py  test_video_ingestion.py  test_website_ingestion.py
