[project]
name = "bharat-rag"
version = "0.0.1"
description = "Bharat-RAG: India-centric, cloud-neutral retrieval engine and reference implementation."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [
    {name = "Abhinav Chaturvedi", email = "abhinav.c@live.in"},
]
dependencies = [
    "fastapi>=0.123.10",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bharatrag"]

[tool.pytest.ini_options]
pythonpath = ["src"]
