[project]
name = "bharat-rag"
version = "0.0.1"
description = "Bharat-RAG: India-centric, cloud-neutral retrieval engine and reference implementation."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [
    {name = "Abhinav Chaturvedi", email = "abhinav.c@live.in"},
]
dependencies = [
    "alembic>=1.17.2",
    "easyocr>=1.7.0",
    "fastapi>=0.123.10",
    "moviepy>=1.0.3",
    "openai-whisper>=20231117",
    "pgvector>=0.4.2",
    "pillow>=10.0.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pypdf>=3.0.0",
    "python-docx>=1.2.0",
    "python-json-logger>=4.0.0",
    "requests>=2.31.0",
    "sentence-transformers>=5.2.0",
    "sqlalchemy>=2.0.45",
    "sqlmodel>=0.0.27",
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "trafilatura>=1.6.0",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.1",
    "ruff>=0.14.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bharatrag"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
# "I" enables import sorting (isort rules)
select = ["I"]

# Optional but nice:
# select = ["I", "F"]  # also removes unused imports, etc.

[tool.ruff.lint.isort]
known-first-party = ["bharatrag"]
combine-as-imports = true
